--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.ChatActivity" />
         <activity android:name=".activities.SearchActivity" />
+        <activity android:name=".activities.ProfileActivity" />
 
     </application>
 
