--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.parse:parseui-widget-android:0.0.1'
     compile 'com.parse:parsefacebookutils-v4-android:1.10.4@aar'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
+    compile 'com.scottyab:aescrypt:0.0.1'
 }
